--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,7 @@ JWT_EXPIRE=7d
 
 # CORS
 CORS_ORIGIN=http://localhost:8080
+
+# Razorpay Configuration
+RAZORPAY_KEY_ID=your_razorpay_key_id
+RAZORPAY_KEY_SECRET=your_razorpay_key_secret
