--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,21 +1,27 @@
+# Database Configuration
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=boa_db
+
 # Server Configuration
 PORT=5000
 NODE_ENV=development
 
-# Database Configuration
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=Aatif@123
-DB_NAME=boa_connect
-DB_PORT=3306
+# Email Configuration (Gmail)
+# To use Gmail:
+# 1. Go to your Google Account settings
+# 2. Enable 2-Factor Authentication
+# 3. Go to Security > App Passwords
+# 4. Generate a new app password for "Mail"
+# 5. Use that 16-character password below (no spaces)
+EMAIL_USER=biharophthalmic2022@gmail.com
+EMAIL_PASSWORD=your-16-character-app-password-here
 
-# JWT Secret
-JWT_SECRET=your_jwt_secret_key_change_this_in_production
-JWT_EXPIRE=7d
+# JWT Secret (for authentication tokens)
+JWT_SECRET=your-secret-key-here
 
-# CORS
-CORS_ORIGIN=http://localhost:8080
-
-# Razorpay Configuration
-RAZORPAY_KEY_ID=your_razorpay_key_id
-RAZORPAY_KEY_SECRET=your_razorpay_key_secret
+# Cloudinary Configuration (for image uploads)
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
