--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "mysql2": "^3.16.0",
+    "nodemailer": "^7.0.12",
     "pdfkit": "^0.17.2",
     "puppeteer": "^24.35.0",
     "razorpay": "^2.9.6"
